--- a/src/App.css
+++ b/src/App.css
@@ -3,43 +3,66 @@
 }
 
 .App-header {
-  background-color: white;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: black;
+  /* background-color: white; */
+  /* min-height: 100vh; */
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* align-items: center; */
+  /* justify-content: center; */
+  /* font-size: calc(10px + 2vmin); */
+  /* color: black; */
+}
+
+.App-header h1 {
+  margin-top: 40px; /* Add margin to create spacing between the title and the rest of the divs */
+  margin-bottom: 40px; /* Add margin to create spacing between the title and the rest of the divs */
 }
 
 form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* align-items: center; */
+}
+
+form > div {
+  margin-bottom: 20px; /* Add margin to create spacing between divs */
 }
 
 label {
+  display: flex;
+  align-items: center;
+  white-space: nowrap; /* Prevent word wrap */
   margin: 10px;
-  font-size: 30px;
+  font-size: 18px;
+  justify-content: center; /* Right justify the label text */
+  width: 100%; /* Ensure the label takes full width */
+}
+
+label span {
+  margin-right: 10px; /* Add margin to create space between the label text and the input */
+}
+
+label .form-control {
+  flex-grow: 1; /* Allow the input to take remaining space */
+  max-width: 400px; /* Set a max-width to align inputs */
 }
 
 label input[type="checkbox"] + span {
-  font-size: 18px;
+  font-size: 16px;
   text-align: center;
-  margin-left: 5px;
+  margin-left: 10px;
 }
 
 input {
-  margin-left: 10px;
-  font-size: 16px;
-  text-align: center;
+  /* margin-left: 10px; */
+  /* font-size: 16px; */  
+  /* text-align: center; */
 }
 
 button {
-  margin-top: 20px;
-  padding: 10px 20px;
-  font-size: 16px;
+  /* margin-top: 20px; */
+  /* padding: 10px 20px; */
+  /* font-size: 16px; */
 }
 
 .error {
